--- a/src/config/cmake/Modules/VXLConfig.cmake.in
+++ b/src/config/cmake/Modules/VXLConfig.cmake.in
@@ -185,5 +185,5 @@ set(VXL_CONFIG_CMAKE 1)
 # Import VXL targets.
 if(NOT VXL_TARGETS_IMPORTED@VXL_CONFIG_TARGETS_CONDITION@)
   set(VXL_TARGETS_IMPORTED 1)
-  include("${CMAKE_CURRENT_LIST_DIR}/VXLTargets.cmake")
+  include("${CMAKE_CURRENT_LIST_DIR}/${VXL_EXPORT_PREFIX}Targets.cmake")
 endif()
