--- a/src/config/cmake/Modules/VXLConfig.cmake.in
+++ b/src/config/cmake/Modules/VXLConfig.cmake.in
@@ -181,6 +181,7 @@ set(VXL_EXPAT_LIBRARIES "@EXPAT_LIBRARIES@")
 
 # Tell UseVXL.cmake that VXLConfig.cmake has been included.
 set(VXL_CONFIG_CMAKE 1)
+set(VXL_EXPORT_PREFIX "@VXL_EXPORT_PREFIX@")
 
 # Import VXL targets.
 if(NOT VXL_TARGETS_IMPORTED@VXL_CONFIG_TARGETS_CONDITION@)
